2005-12-04  Derek Atkins  <derek@ihtfp.com>

	* configure.in: fix some of the output strings
	* lib/libgsf-1.12.3/gsf/glib24_26-compat.c:
	  make g_get_filename_charsets static because it's not
	  needed outside this file.
	* lib/goffice-0.0.4/goffice/glib24_26-compat.c:
	  make _g_compute_locale_variants static because it's
	  not needed outside this file.

	* src/gnome-utils/Makefile.am: Grab svn version using
	  svnversion instead of parsing "svn info".  Also make it
	  so that it doesn't force a rebuild if the version does
	  not change.
	* src/gnome-utils/gnc-splash.c: changed svn version
	  from an integer into a string.  Handle that in the
	  splash screen.

2005-12-04  Joshua Sled  <jsled@asynchronous.org>

	* All: Fold branches/goffice-update/ back into trunk/.

2005-12-04  David Hampton  <hampton@employees.org>

	* src/gnome-utils/test/test-gnc-recurrence.c:
	* src/engine/test-core/test-engine-stuff.c:
	* src/engine/gnc-associate-account.c:
	* lib/libqof/qof/qofquery.c: Don't ignore the return value of glib
	list functions.  This will likely become a warning in future
	version of glib, which translates to an error for gnucash since it
	compiles with the -Werror flag.

2005-12-04  Derek Atkins  <derek@ihtfp.com>

	* macros/autogen.sh: don't warn the user about running
	  configure with zero arguments.  Autogen doesn't run
	  configure anymore.  This confused a user.

2005-12-04  Christian Stimming  <stimming@tuhh.de>

	* src/import-export/hbci/druid-hbci-initial.c: Fix crash when
	clicking on "start aqbanking-wizard" with gwenhywfar>=1.99.x.

2005-12-03  Christian Stimming  <stimming@tuhh.de>

	* Makefile.am: Add convenience makefile rule "make pot" for
	updating the translation template. Rename the rule for
	auto-generation of ChangeLog.svn from svn to "ChangeLog.svn".

2005-12-03  Joshua Sled  <jsled@asynchronous.org>

	* split-register-control.c (gnc_split_register_auto_completion):
	Fail fast if no auto-complete requested.