@@ -552,23 +552,32 @@ gnc_file_be_write_to_file(FileBackend *fbe,
             if(chmod(tmp_name, statbuf.st_mode) != 0)
             {
                 qof_backend_set_error(be, ERR_BACKEND_PERM);
+		/* FIXME: Even if the chmod did fail, the save
+		   nevertheless completed successfully. It is
+		   therefore wrong to signal the ERR_BACKEND_PERM
+		   error here which implies that the saving itself
+		   failed! What should we do? */
                 PWARN("unable to chmod filename %s: %s",
-                        datafile ? datafile : "(null)", 
+                        tmp_name ? tmp_name : "(null)", 
                         strerror(errno) ? strerror(errno) : ""); 
 #if VFAT_DOESNT_SUCK  /* chmod always fails on vfat fs */
                 g_free(tmp_name);
                 return FALSE;
 #endif
             }
-            if(chown(tmp_name, statbuf.st_uid, statbuf.st_gid) != 0)
+	    /* Don't try to change the owner. Only root can do
+	       that. */
+            if(chown(tmp_name, -1, statbuf.st_gid) != 0)
             {
-                qof_backend_set_error(be, ERR_BACKEND_PERM);
+	        /* qof_backend_set_error(be, ERR_BACKEND_PERM); */
+	        /* A failed chown doesn't mean that the saving itself
+		   failed. So don't abort with an error here! */
                 PWARN("unable to chown filename %s: %s",
-                        datafile ? datafile : "(null)", 
+                        tmp_name ? tmp_name : "(null)", 
                         strerror(errno) ? strerror(errno) : ""); 
 #if VFAT_DOESNT_SUCK /* chown always fails on vfat fs */
-                g_free(tmp_name);
-                return FALSE;
+                /* g_free(tmp_name);
+		   return FALSE; */
 #endif
             }
         }
